Bug Fixes
Bugs fixed in Search by Product Name and Search by Active Ingredient functionalities